--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
